--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,28 @@ header{
     margin-top: 10px;
 }
 
+.btn-topo{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    z-index: 2;
+    width: 50px;
+    height: 50px;
+    background: var(--blue-primary);
+    border-radius: 50%;
+    
+}
+
+.btn-topo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-topo a{
+    color: var(--white);
+}
+
 
 
 
